fix: resolve code formatting and compatibility issues
- Apply Spotless code formatting to all Java files
- Fix Java compatibility issues with getFirst() and getLast() methods
- Update test files to use compatible List access methods
- Add .trae configuration directory